objects/Account_Program__c.object
<CustomObject>
    <description>The Account/Program object is part of the Interventions App and links Programs and Schools/Accounts.  This linking occurs in the Interventions Setup when a school selects which interventions Programs they will enroll in for a specific year.  This object tracks the relationships of Programs and Schools and whether the Programs are active.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Program active for this School in this year?</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Program_Information__c</fullName>
        <description>This field can be used by specific sites to add site level information regarding a specific program.  The additional field on the program object will only be editable by HQ</description>
        <label>Additional Program Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Year_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The year that this record is (was) active for</inlineHelpText>
        <label>Current Year ID</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Accounts/Programs</relationshipLabel>
        <relationshipName>Accounts_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <formula>Current_Year_ID__r.Name__c</formula>
        <inlineHelpText>The name of the year that this record is (was) active for</inlineHelpText>
        <label>Current Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <inlineHelpText>This field joins the Account/Program record to the correct intervention Program</inlineHelpText>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>School Programs</relationshipLabel>
        <relationshipName>Accounts_Programs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason_for_Not_Participating__c</fullName>
        <inlineHelpText>If applicable, what is the reason this School is not participating in the Program?</inlineHelpText>
        <label>Reason for Not Participating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This ID is used to prevent duplicate Account/Program records. It should not be changed.</inlineHelpText>
        <label>Reference ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <inlineHelpText>This field joins the Account/Program record to the correct School.</inlineHelpText>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts/Programs</relationshipLabel>
        <relationshipName>Accounts_Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Account/Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Active__c</columns>
        <columns>Reason_for_Not_Participating__c</columns>
        <columns>School__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>test</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Active__c</columns>
        <columns>Reason_for_Not_Participating__c</columns>
        <columns>School__c</columns>
        <filterScope>Everything</filterScope>
        <label>test</label>
    </listViews>
    <nameField>
        <label>School Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts/Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>