objects/Account_Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Active__c</columns>
    <columns>Reason_for_Not_Participating__c</columns>
    <columns>School__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>