objects/Account_Program__c/listViews/test.listView-meta.xml
<ListView>
    <fullName>test</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Active__c</columns>
    <columns>Reason_for_Not_Participating__c</columns>
    <columns>School__c</columns>
    <filterScope>Everything</filterScope>
    <label>test</label>
</ListView>